We love `PUSH0` (as long as it's supported)

--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,7 @@ solc_version = '0.8.20'
 ffi = true
 fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}, { access = "read", path = "./foundry-out"}]
 via_ir = true
+evm_version = 'shanghai'
 
 [profile.ci]
 fuzz_runs = 100000
